@@ -1,0 +1,15 @@
+# "type-scope-01.prsimrc"
+# @haco@ inv.haco-c
+
+pwt
+pusht inv
+pwt
+pusht inv
+pwt
+popt
+pwt
+popt
+pwt
+popt
+pwt
+
