@@ -1,0 +1,7 @@
+Not currently inside any type scope.
+inv<>
+inv<>
+inv<>
+Not currently inside any type scope.
+Warning: not currently inside any type scope.
+Not currently inside any type scope.
