@@ -1,0 +1,6 @@
+# "type-scope-01.prsimrc"
+# @haco@ inv.haco-c
+
+pwt
+pusht inv<3>
+pwt
